Criar projeto conversor-de-moedas

--- a/jogo-da-velha/src/app/jogo-da-velha/jogo-da-velha.component.css
+++ b/jogo-da-velha/src/app/jogo-da-velha/jogo-da-velha.component.css
@@ -59,3 +59,7 @@ background-image: url('/assets/imagens/o.png');
 .kz-cor-vitoria {
  background-color: lightgreen;
 }
+
+.kz-cor-derrota {
+  background-color: lightcoral;
+ }
