--- a/conversor-de-moedas/src/app/app.component.html
+++ b/conversor-de-moedas/src/app/app.component.html
@@ -1,3 +1,16 @@
-<router-outlet><app-conversor>
+<div class="container-fluid">
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            {{title}}
+          </a>
+       </div>
+      </div>
+   </nav>
 
-</app-conversor></router-outlet>
+  <router-outlet><app-conversor>
+
+  </app-conversor></router-outlet>
+
+</div>
