--- a/projeto-final/src/app/app.component.html
+++ b/projeto-final/src/app/app.component.html
@@ -36,5 +36,8 @@
     <a [routerLink]="['/dashboard']">
       Dashboard
   </a>
+  <a [routerLink]="['/calculadora']">
+    Calculadora
+</a>
   </router-outlet>
 </div>
