--- a/conversor-de-moedas/src/app/conversor/components/conversor.component.html
+++ b/conversor-de-moedas/src/app/conversor/components/conversor.component.html
@@ -15,7 +15,8 @@
 			name="valor"
 			class="form-control text-right"
 			placeholder="0"
-      		[(ngModel)]="conversao.valor"
+      [(ngModel)]="conversao.valor"
+      numero
 			required>
 		<select
 			name="moedaDe"
