--- a/conversor-de-moedas/src/app/conversor/utils/modal-cotacao.component.html
+++ b/conversor-de-moedas/src/app/conversor/utils/modal-cotacao.component.html
@@ -1,5 +1,6 @@
 <div
 	class="modal fade"
+  [id]="id"
 	tabindex="-1"
 	role="dialog"
 	aria-labelledby="modalLabel">
@@ -9,25 +10,37 @@
         <button
         	type="button"
         	class="close"
-        	data-dismiss="modal"
+        	data--bs-dismiss="modal"
         	aria-label="Fechar">
         	<span aria-hidden="true">&times;</span>
         </button>
         <h4 class="modal-title" id="modalLabel">
-        	Cotação em
+        	Cotação em {{ dataCotacao }}
         </h4>
       </div>
       <div class="modal-body text-center">
         <div>
-			<h2>=</h2>
-			<p>1  = / 1  = </p>
+			<h2>
+        {{ conversao.valor }}
+        {{ conversao.moedaDe }}
+        =
+        {{ valorConvertido }}
+        {{ conversao.moedaPara }}
+      </h2>
+			<p>1 {{ conversao.moedaPara }} =
+        {{ cotacaoPara }} {{ conversao.moedaDe }}
+        /
+        1 {{ conversao.moedaDe }} =
+        {{ cotacaoDe }} {{ conversao.moedaPara }}
+      </p>
 		</div>
       </div>
       <div class="modal-footer">
         <button
         	type="button"
         	class="btn btn-success"
-        	data-dismiss="modal">
+        	data-bs-dismiss="modal"
+          (click)="novaConsulta()">
         	Nova consulta
         </button>
       </div>
