--- a/projeto-final/src/app/app.component.html
+++ b/projeto-final/src/app/app.component.html
@@ -39,5 +39,8 @@
   <a [routerLink]="['/calculadora']">
     Calculadora
 </a>
+<a [routerLink]="['/conversor-moedas']">
+  Conversor de moedas
+</a>
   </router-outlet>
 </div>
