Finalizado (problemas de rotas)

--- a/projeto-final/src/app/app.component.html
+++ b/projeto-final/src/app/app.component.html
@@ -42,5 +42,11 @@
 <a [routerLink]="['/conversor-moedas']">
   Conversor de moedas
 </a>
+<a [routerLink]="['/tarefas']">
+  Gerenciador de tarefas
+</a>
+<a [routerLink]="['/jogo-da-velha']">
+  Jogo da velha
+</a>
   </router-outlet>
 </div>
